--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}">
-<script type="text/javascript" src="js/trolley.js"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/trolley.js') }}"></script>
 {% endblock %}
 
 
@@ -59,16 +59,6 @@
                         {% endif %}
                     </a>
                     <ul class="dropdown-menu">
-                        <li>
-                            <button onclick="newItem()">Click Me</button>
-                        </li>
-                        <li>
-                            <table id="trolley">
-
-                            </table>
-                        </li>
-                    </ul>
-                    <ul class="dropdown-menu">
                         <li><a href="{{ url_for('user.profile', username=current_user.username) }}">个人资料</a></li>
                         <li><a href="{{ url_for('user.edit_profile', username=current_user.username) }}">编辑资料</a></li>
                         <li><a href="{{ url_for('auth.change_password') }}">更改密码</a></li>
@@ -78,17 +68,42 @@
                         <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
                     </ul>
                 </li>
-                    {% if current_user.is_administrator() %}
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                管理 <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="{{ url_for("manage.manage_movies") }}">管理电影资料</a></li>
-                                <li><a href="{{ url_for("manage.create_movie") }}">创建电影资料</a></li>
-                            </ul>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            购物车<b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <button onclick="newItem(1, 'Test', 23.3, 3)" >Click Me</button>
                         </li>
-                    {% endif %}
+                        <li>
+                            <table class="table" id="trolley-navbar">
+                                <tr>
+                                    <td>编号</td>
+                                    <td>名称</td>
+                                    <td>单价</td>
+                                    <td>数量</td>
+                                </tr>
+                            </table>
+                        </li>
+                    </ul>
+                    {% for item in get_trolley() %}
+                        <script>
+                            newItem("trolley-navbar", {{item.movie_id}}, "{{item.movie_name}}", {{item.movie_price}}, {{item.movie_count}}, 0);
+                        </script>
+                    {% endfor %}
+                </li>
+                {% if current_user.is_administrator() %}
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        管理 <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for("manage.manage_movies") }}">管理电影资料</a></li>
+                        <li><a href="{{ url_for("manage.create_movie") }}">创建电影资料</a></li>
+                    </ul>
+                </li>
+                {% endif %}
                 {% else %}
                 <li><a href="{{ url_for('auth.register') }}">注册</a></li>
                 <li><a href="{{ url_for('auth.login') }}">登陆</a></li>
