--- a/app/templates/subject/commodity.html
+++ b/app/templates/subject/commodity.html
@@ -35,7 +35,19 @@
         <p><b>退款状态：</b>{% if voucher.is_refund == 0 %}无{% elif voucher.is_refund == 1 %}正在退款{% else %}已退款{% endif %}</p>
     </div>
     <div style="text-align:center;">
-        <button class="btn btn-success" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.refund', order_identify=voucher.order_identify) }}';">申请退款</button>
+        {% if current_user.is_administrator() %}
+            {% if voucher.is_refund == 1 %}
+                <button class="btn btn-warning" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.admin_refund', order_identify=voucher.order_identify) }}';">确认退款</button>
+            {% endif %}
+            {% if voucher.is_refund == 0 %}
+                <button class="btn btn-danger" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.admin_refund', order_identify=voucher.order_identify) }}';">取消订单</button>
+            {% endif %}
+            {% if voucher.is_send == False and voucher.is_refund == 0 %}
+                <button class="btn btn-success" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.admin_send', order_identify=voucher.order_identify) }}';">确认发货</button>
+            {% endif %}
+        {% else %}
+            <button class="btn btn-warning" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.refund', order_identify=voucher.order_identify) }}';">申请退款</button>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
