--- a/app/templates/subject/commodity.html
+++ b/app/templates/subject/commodity.html
@@ -48,6 +48,7 @@
         {% else %}
             <button class="btn btn-warning" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.refund', order_identify=voucher.order_identify) }}';">申请退款</button>
         {% endif %}
+        <button class="btn btn-info" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.order') }}';">返回</button>
     </div>
 </div>
 {% endblock %}
