--- a/app/templates/subject/commodity.html
+++ b/app/templates/subject/commodity.html
@@ -22,7 +22,7 @@
     </div>
     <div class="col-md-8">
         <p><b>商品名称：</b>{{ voucher.movie.name }}</p>
-        <p><b>价格：</b>{{ voucher.movie.price }}</p>
+        <p><b>价格：</b>{{ voucher.total_money }}</p>
         <p><b>支付方式：</b>{{ voucher.payment_method }}</p>
         <p><b>支付状态：</b>{% if voucher.is_pay %}已支付{% else %}待支付{% endif %}</p>
         <p><b>运费：</b>{{ voucher.freight }}</p>
@@ -46,7 +46,9 @@
                 <button class="btn btn-success" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.admin_send', order_identify=voucher.order_identify) }}';">确认发货</button>
             {% endif %}
         {% else %}
-            <button class="btn btn-warning" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.refund', order_identify=voucher.order_identify) }}';">申请退款</button>
+            {% if voucher.is_refund == 0 and voucher.is_send == False %}
+                <button class="btn btn-warning" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.refund', order_identify=voucher.order_identify) }}';">申请退款</button>
+            {% endif %}
         {% endif %}
         <button class="btn btn-info" style="margin:0 auto;" onclick="javascript:window.location.href = '{{ url_for('user.order') }}';">返回</button>
     </div>
