--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -83,6 +83,9 @@
                                 </tr>
                             </table>
                         </li>
+                        <li>
+                            <button type="button" class="btn btn-success" onclick="javascript:window.open('{{ url_for('trolley.view_trolley') }}');">进入购物车</button>
+                        </li>
                     </ul>
                     {% for item in get_trolley() %}
                         <script>
