--- a/app/templates/trolley/commodities.html
+++ b/app/templates/trolley/commodities.html
@@ -9,37 +9,42 @@
 
 {% block page_content %}
 <div class="page-header" id="page-header">
-    <h1>{{ voucher.movie.name }}</h1>
+    <h1>订单详情</h1>
 </div>
 
-<div class="box">
+<div class="box" style="text-align: center;">
     {% for item in current_items %}
-    <div class="col-md-4">
-        {% if item.movie.picture %}
-        <img class="img-rounded" src="data:;base64,{{ base64.b64encode(item.movie.picture).decode('ascii') }}"
-             width="100%"/>
-        {% else %}
-        <img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
-        {% endif %}
+    <div class="row">
+        <div class="col-md-4" >
+            {% if item.movie.picture %}
+            <img class="img-rounded" src="data:;base64,{{ base64.b64encode(item.movie.picture).decode('ascii') }}"
+                 width="100%"/>
+            {% else %}
+            <img class="img-rounded" src="{{ url_for('static', filename='movie.png') }}" width="100%"/>
+            {% endif %}
+        </div>
+        <div class="col-md-8">
+            <p><b>商品名称：</b>{{ item.movie.name }}</p>
+            <p><b>单价：</b>{{ item.movie.price }}</p>
+            <p><b>数量：</b>{{ item.movie_count }}</p>
+        </div>
     </div>
-    <div class="col-md-8">
-        <p><b>商品名称：</b>{{ item.movie.name }}</p>
-        <p><b>单价：</b>{{ item.movie.total_money }}</p>
-        <p><b>数量：</b>{{ item.movie_count }}</p>
-    </div>
+    <hr />
     {% endfor %}
     <div>
-        <p><b>价格：</b>{{ voucher.total_money }}</p>
-        <p><b>支付方式：</b>{{ voucher.payment_method }}</p>
-        <p><b>支付状态：</b>{% if voucher.is_pay %}已支付{% else %}待支付{% endif %}</p>
-        <p><b>运费：</b>{{ voucher.freight }}</p>
-        <p><b>发货状态：</b>{% if voucher.is_send %}已发货{% else %}待发货{% endif %}</p>
-        <p><b>收货人：</b>{{ voucher.user.name }}</p>
-        <p><b>收货方式：</b>{{ voucher.receive_method }}</p>
-        <p><b>发货人：</b>迅影</p>
-        <p><b>订单编号：</b>{{ voucher.order_identify }}</p>
-        <p><b>创建时间：</b>{{ (voucher.timestamp+timedelta(hours=8)).strftime("%Y-%m-%d %H:%M:%S") }}</p>
-        <p><b>退款状态：</b>{% if voucher.is_refund == 0 %}无{% elif voucher.is_refund == 1 %}正在退款{% else %}已退款{% endif %}</p>
+        <div>
+            <p><b>价格：</b>{{ voucher.total_money }}</p>
+            <p><b>支付方式：</b>{{ voucher.payment_method }}</p>
+            <p><b>支付状态：</b>{% if voucher.is_pay %}已支付{% else %}待支付{% endif %}</p>
+            <p><b>运费：</b>{{ voucher.freight }}</p>
+            <p><b>发货状态：</b>{% if voucher.is_send %}已发货{% else %}待发货{% endif %}</p>
+            <p><b>收货人：</b>{{ voucher.user.name }}</p>
+            <p><b>收货方式：</b>{{ voucher.receive_method }}</p>
+            <p><b>发货人：</b>迅影</p>
+            <p><b>订单编号：</b>{{ voucher.order_identify }}</p>
+            <p><b>创建时间：</b>{{ (voucher.timestamp+timedelta(hours=8)).strftime("%Y-%m-%d %H:%M:%S") }}</p>
+            <p><b>退款状态：</b>{% if voucher.is_refund == 0 %}无{% elif voucher.is_refund == 1 %}正在退款{% else %}已退款{% endif %}</p>
+        </div>
     </div>
     <div style="text-align:center;">
         {% if current_user.is_administrator() %}
