--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -83,8 +83,11 @@
                                 </tr>
                             </table>
                         </li>
+                        <li>
+                            总价：￥<span id="total_price-nav">0</span>
+                        </li>
                         <li style="text-align:center;">
-                            <button type="button" class="btn btn-success" onclick="javascript:window.open('{{ url_for('trolley.view_trolley') }}');">进入购物车</button>
+                            <button type="button" class="btn btn-success" onclick="javascript:window.location.href='{{ url_for('trolley.view_trolley') }}';">进入购物车</button>
                         </li>
                     </ul>
                     {% for item in get_trolley() %}
