--- a/app/templates/trolley/trolley.html
+++ b/app/templates/trolley/trolley.html
@@ -21,16 +21,19 @@
                 <td>单价</td>
                 <td>数量</td>
             </tr>
-            {% for item in items %}
-                <script>
-                    newItem("trolley-main", {{item.movie_id}}, "{{item.movie_name}}", {{item.movie_price}}, {{item.movie_count}}, 1);
-                </script>
-            {% endfor %}
         </table>
+        <div class="row">
+            总价：￥<span id="total_price-main">0</span>
+        </div>
         <div style="text-align:center;">
             <button class="btn btn-danger" type="button" onclick="submitTrolley('{{ url_for('main.index') }}')">返回</button>
             <button class="btn btn-primary" type="button" onclick="submitTrolley('{{ url_for('.submit') }}')">购买</button>
         </div>
+        {% for item in items %}
+            <script>
+                newItem("trolley-main", {{item.movie_id}}, "{{item.movie_name}}", {{item.movie_price}}, {{item.movie_count}}, 1);
+            </script>
+        {% endfor %}
         {% if pagination %}
         <div style="text-align: center;">
             <div class="pagination">
