--- a/app/templates/subject/movie.html
+++ b/app/templates/subject/movie.html
@@ -66,6 +66,11 @@
                 <div class="comment-info">
                     <span class="glyphicon glyphicon-user comment-author">{{ comment.author.name }}</span>
                     <span class="glyphicon glyphicon-time comment-time">{{ (comment.timestamp+timedelta(hours=8)).strftime("%Y-%m-%d %H:%M:%S") }}</span>
+                    <span>
+                        {% if comment.author.id==current_user.id %}
+                            <button class="btn btn-danger" onclick="javascript:window.location.href='{{ url_for('subject.comdel', id=comment.id) }}';">删除</button>
+                        {% endif %}
+                    </span>
                 </div>
             </div>
         </li>
